src/uv/snapshots/_gammaloop__uv__tests__nine_loop_cycle_dots.snap
---
source: src/uv/tests.rs
expression: cycle_dots
---
[
    '''
graph {
   node [shape=circle,height=0.1,label=""];  overlap="scale";
   8 -- 14 [color="gray50:gray75;0.5",];
  1 -- 10 [color="gray75",];
  2 -- 16 [color="gray75",];
  8 -- 12 [color="red:blue;0.5 " ];
  8 -- 13 [color="gray50:gray75;0.5",];
ext10 [shape=none, label=""];
 16 -- ext10 [color="gray75",];
 ext11 [shape=none, label=""];
 9 -- ext11 [color="gray75",];
   5 -- 16 [color="gray75",];
  8 -- 12 [color="red:blue;0.5 " ];
  2 -- 16 [color="gray75",];
  8 -- 17 [color="gray50:gray75;0.5",];
  4 -- 18 [color="gray75",];
  7 -- 14 [color="gray75",];
  8 -- 14 [color="gray50:gray75;0.5",];
  2 -- 16 [color="gray75",];
  0 -- 11 [color="gray75",];
ext30 [shape=none, label=""];
 17 -- ext30 [color="gray75",];
   2 -- 11 [color="gray75",];
  2 -- 11 [color="gray75",];
  5 -- 15 [color="gray75",];
  0 -- 9 [color="gray75",];
  5 -- 9 [color="gray75",];
  5 -- 17 [color="gray75",];
  3 -- 18 [color="gray75",];
  3 -- 16 [color="gray75",];
  7 -- 16 [color="gray75",];
  6 -- 16 [color="gray75",];
  1 -- 14 [color="gray75",];
  8 -- 18 [color="gray50:gray75;0.5",];
  3 -- 15 [color="gray75",];
}''',
    '''
graph {
   node [shape=circle,height=0.1,label=""];  overlap="scale";
   8 -- 14 [color="red:blue;0.5 " ];
  1 -- 10 [color="gray75",];
  2 -- 16 [color="gray75",];
  8 -- 12 [color="gray50:gray75;0.5",];
  8 -- 13 [color="gray50:gray75;0.5",];
ext10 [shape=none, label=""];
 16 -- ext10 [color="gray75",];
 ext11 [shape=none, label=""];
 9 -- ext11 [color="gray75",];
   5 -- 16 [color="gray75",];
  8 -- 12 [color="gray50:gray75;0.5",];
  2 -- 16 [color="gray75",];
  8 -- 17 [color="gray50:gray75;0.5",];
  4 -- 18 [color="gray75",];
  7 -- 14 [color="gray75:gray50;0.5",];
  8 -- 14 [color="red:blue;0.5 " ];
  2 -- 16 [color="gray75",];
  0 -- 11 [color="gray75",];
ext30 [shape=none, label=""];
 17 -- ext30 [color="gray75",];
   2 -- 11 [color="gray75",];
  2 -- 11 [color="gray75",];
  5 -- 15 [color="gray75",];
  0 -- 9 [color="gray75",];
  5 -- 9 [color="gray75",];
  5 -- 17 [color="gray75",];
  3 -- 18 [color="gray75",];
  3 -- 16 [color="gray75",];
  7 -- 16 [color="gray75",];
  6 -- 16 [color="gray75",];
  1 -- 14 [color="gray75:gray50;0.5",];
  8 -- 18 [color="gray50:gray75;0.5",];
  3 -- 15 [color="gray75",];
}''',
    '''
graph {
   node [shape=circle,height=0.1,label=""];  overlap="scale";
   8 -- 14 [color="gray75",];
  1 -- 10 [color="gray75",];
  2 -- 16 [color="red:blue;0.5 " ];
  8 -- 12 [color="gray75",];
  8 -- 13 [color="gray75",];
ext10 [shape=none, label=""];
 16 -- ext10 [color="gray50",];
 ext11 [shape=none, label=""];
 9 -- ext11 [color="gray75",];
   5 -- 16 [color="gray75:gray50;0.5",];
  8 -- 12 [color="gray75",];
  2 -- 16 [color="red:blue;0.5 " ];
  8 -- 17 [color="gray75",];
  4 -- 18 [color="gray75",];
  7 -- 14 [color="gray75",];
  8 -- 14 [color="gray75",];
  2 -- 16 [color="gray50",];
  0 -- 11 [color="gray75",];
ext30 [shape=none, label=""];
 17 -- ext30 [color="gray75",];
   2 -- 11 [color="gray50:gray75;0.5",];
  2 -- 11 [color="gray50:gray75;0.5",];
  5 -- 15 [color="gray75",];
  0 -- 9 [color="gray75",];
  5 -- 9 [color="gray75",];
  5 -- 17 [color="gray75",];
  3 -- 18 [color="gray75",];
  3 -- 16 [color="gray75:gray50;0.5",];
  7 -- 16 [color="gray75:gray50;0.5",];
  6 -- 16 [color="gray75:gray50;0.5",];
  1 -- 14 [color="gray75",];
  8 -- 18 [color="gray75",];
  3 -- 15 [color="gray75",];
}''',
    '''
graph {
   node [shape=circle,height=0.1,label=""];  overlap="scale";
   8 -- 14 [color="gray75",];
  1 -- 10 [color="gray75",];
  2 -- 16 [color="red:blue;0.5 " ];
  8 -- 12 [color="gray75",];
  8 -- 13 [color="gray75",];
ext10 [shape=none, label=""];
 16 -- ext10 [color="gray50",];
 ext11 [shape=none, label=""];
 9 -- ext11 [color="gray75",];
   5 -- 16 [color="gray75:gray50;0.5",];
  8 -- 12 [color="gray75",];
  2 -- 16 [color="gray50",];
  8 -- 17 [color="gray75",];
  4 -- 18 [color="gray75",];
  7 -- 14 [color="gray75",];
  8 -- 14 [color="gray75",];
  2 -- 16 [color="red:blue;0.5 " ];
  0 -- 11 [color="gray75",];
ext30 [shape=none, label=""];
 17 -- ext30 [color="gray75",];
   2 -- 11 [color="gray50:gray75;0.5",];
  2 -- 11 [color="gray50:gray75;0.5",];
  5 -- 15 [color="gray75",];
  0 -- 9 [color="gray75",];
  5 -- 9 [color="gray75",];
  5 -- 17 [color="gray75",];
  3 -- 18 [color="gray75",];
  3 -- 16 [color="gray75:gray50;0.5",];
  7 -- 16 [color="gray75:gray50;0.5",];
  6 -- 16 [color="gray75:gray50;0.5",];
  1 -- 14 [color="gray75",];
  8 -- 18 [color="gray75",];
  3 -- 15 [color="gray75",];
}''',
    '''
graph {
   node [shape=circle,height=0.1,label=""];  overlap="scale";
   8 -- 14 [color="gray75",];
  1 -- 10 [color="gray75",];
  2 -- 16 [color="gray50:gray75;0.5",];
  8 -- 12 [color="gray75",];
  8 -- 13 [color="gray75",];
ext10 [shape=none, label=""];
 16 -- ext10 [color="gray75",];
 ext11 [shape=none, label=""];
 9 -- ext11 [color="gray75",];
   5 -- 16 [color="gray75",];
  8 -- 12 [color="gray75",];
  2 -- 16 [color="gray50:gray75;0.5",];
  8 -- 17 [color="gray75",];
  4 -- 18 [color="gray75",];
  7 -- 14 [color="gray75",];
  8 -- 14 [color="gray75",];
  2 -- 16 [color="gray50:gray75;0.5",];
  0 -- 11 [color="gray75:gray50;0.5",];
ext30 [shape=none, label=""];
 17 -- ext30 [color="gray75",];
   2 -- 11 [color="red:blue;0.5 " ];
  2 -- 11 [color="red:blue;0.5 " ];
  5 -- 15 [color="gray75",];
  0 -- 9 [color="gray75",];
  5 -- 9 [color="gray75",];
  5 -- 17 [color="gray75",];
  3 -- 18 [color="gray75",];
  3 -- 16 [color="gray75",];
  7 -- 16 [color="gray75",];
  6 -- 16 [color="gray75",];
  1 -- 14 [color="gray75",];
  8 -- 18 [color="gray75",];
  3 -- 15 [color="gray75",];
}''',
    '''
graph {
   node [shape=circle,height=0.1,label=""];  overlap="scale";
   8 -- 14 [color="gray75",];
  1 -- 10 [color="gray75",];
  2 -- 16 [color="red:blue;0.5 " ];
  8 -- 12 [color="gray75",];
  8 -- 13 [color="gray75",];
ext10 [shape=none, label=""];
 16 -- ext10 [color="gray50",];
 ext11 [shape=none, label=""];
 9 -- ext11 [color="gray50",];
   5 -- 16 [color="red:blue;0.5 " ];
  8 -- 12 [color="gray75",];
  2 -- 16 [color="gray50",];
  8 -- 17 [color="gray75",];
  4 -- 18 [color="gray75",];
  7 -- 14 [color="gray75",];
  8 -- 14 [color="gray75",];
  2 -- 16 [color="gray50",];
  0 -- 11 [color="red:blue;0.5 " ];
ext30 [shape=none, label=""];
 17 -- ext30 [color="gray75",];
   2 -- 11 [color="red:blue;0.5 " ];
  2 -- 11 [color="gray50",];
  5 -- 15 [color="gray50:gray75;0.5",];
  0 -- 9 [color="red:blue;0.5 " ];
  5 -- 9 [color="red:blue;0.5 " ];
  5 -- 17 [color="gray50:gray75;0.5",];
  3 -- 18 [color="gray75",];
  3 -- 16 [color="gray75:gray50;0.5",];
  7 -- 16 [color="gray75:gray50;0.5",];
  6 -- 16 [color="gray75:gray50;0.5",];
  1 -- 14 [color="gray75",];
  8 -- 18 [color="gray75",];
  3 -- 15 [color="gray75",];
}''',
    '''
graph {
   node [shape=circle,height=0.1,label=""];  overlap="scale";
   8 -- 14 [color="red:blue;0.5 " ];
  1 -- 10 [color="gray75",];
  2 -- 16 [color="gray75:gray50;0.5",];
  8 -- 12 [color="gray50:gray75;0.5",];
  8 -- 13 [color="gray50:gray75;0.5",];
ext10 [shape=none, label=""];
 16 -- ext10 [color="gray50",];
 ext11 [shape=none, label=""];
 9 -- ext11 [color="gray75",];
   5 -- 16 [color="red:blue;0.5 " ];
  8 -- 12 [color="gray50:gray75;0.5",];
  2 -- 16 [color="gray75:gray50;0.5",];
  8 -- 17 [color="red:blue;0.5 " ];
  4 -- 18 [color="gray75",];
  7 -- 14 [color="red:blue;0.5 " ];
  8 -- 14 [color="gray50",];
  2 -- 16 [color="gray75:gray50;0.5",];
  0 -- 11 [color="gray75",];
ext30 [shape=none, label=""];
 17 -- ext30 [color="gray50",];
   2 -- 11 [color="gray75",];
  2 -- 11 [color="gray75",];
  5 -- 15 [color="gray50:gray75;0.5",];
  0 -- 9 [color="gray75",];
  5 -- 9 [color="gray50:gray75;0.5",];
  5 -- 17 [color="red:blue;0.5 " ];
  3 -- 18 [color="gray75",];
  3 -- 16 [color="gray75:gray50;0.5",];
  7 -- 16 [color="red:blue;0.5 " ];
  6 -- 16 [color="gray75:gray50;0.5",];
  1 -- 14 [color="gray75:gray50;0.5",];
  8 -- 18 [color="gray50:gray75;0.5",];
  3 -- 15 [color="gray75",];
}''',
    '''
graph {
   node [shape=circle,height=0.1,label=""];  overlap="scale";
   8 -- 14 [color="gray50:gray75;0.5",];
  1 -- 10 [color="gray75",];
  2 -- 16 [color="gray75:gray50;0.5",];
  8 -- 12 [color="gray50:gray75;0.5",];
  8 -- 13 [color="gray50:gray75;0.5",];
ext10 [shape=none, label=""];
 16 -- ext10 [color="gray50",];
 ext11 [shape=none, label=""];
 9 -- ext11 [color="gray75",];
   5 -- 16 [color="red:blue;0.5 " ];
  8 -- 12 [color="gray50:gray75;0.5",];
  2 -- 16 [color="gray75:gray50;0.5",];
  8 -- 17 [color="red:blue;0.5 " ];
  4 -- 18 [color="gray75:gray50;0.5",];
  7 -- 14 [color="gray75",];
  8 -- 14 [color="gray50:gray75;0.5",];
  2 -- 16 [color="gray75:gray50;0.5",];
  0 -- 11 [color="gray75",];
ext30 [shape=none, label=""];
 17 -- ext30 [color="gray50",];
   2 -- 11 [color="gray75",];
  2 -- 11 [color="gray75",];
  5 -- 15 [color="gray50:gray75;0.5",];
  0 -- 9 [color="gray75",];
  5 -- 9 [color="gray50:gray75;0.5",];
  5 -- 17 [color="red:blue;0.5 " ];
  3 -- 18 [color="red:blue;0.5 " ];
  3 -- 16 [color="red:blue;0.5 " ];
  7 -- 16 [color="gray75:gray50;0.5",];
  6 -- 16 [color="gray75:gray50;0.5",];
  1 -- 14 [color="gray75",];
  8 -- 18 [color="red:blue;0.5 " ];
  3 -- 15 [color="gray50:gray75;0.5",];
}''',
    '''
graph {
   node [shape=circle,height=0.1,label=""];  overlap="scale";
   8 -- 14 [color="gray75",];
  1 -- 10 [color="gray75",];
  2 -- 16 [color="gray75:gray50;0.5",];
  8 -- 12 [color="gray75",];
  8 -- 13 [color="gray75",];
ext10 [shape=none, label=""];
 16 -- ext10 [color="gray50",];
 ext11 [shape=none, label=""];
 9 -- ext11 [color="gray75",];
   5 -- 16 [color="red:blue;0.5 " ];
  8 -- 12 [color="gray75",];
  2 -- 16 [color="gray75:gray50;0.5",];
  8 -- 17 [color="gray75",];
  4 -- 18 [color="gray75",];
  7 -- 14 [color="gray75",];
  8 -- 14 [color="gray75",];
  2 -- 16 [color="gray75:gray50;0.5",];
  0 -- 11 [color="gray75",];
ext30 [shape=none, label=""];
 17 -- ext30 [color="gray75",];
   2 -- 11 [color="gray75",];
  2 -- 11 [color="gray75",];
  5 -- 15 [color="red:blue;0.5 " ];
  0 -- 9 [color="gray75",];
  5 -- 9 [color="gray50:gray75;0.5",];
  5 -- 17 [color="gray50:gray75;0.5",];
  3 -- 18 [color="gray50:gray75;0.5",];
  3 -- 16 [color="red:blue;0.5 " ];
  7 -- 16 [color="gray75:gray50;0.5",];
  6 -- 16 [color="gray75:gray50;0.5",];
  1 -- 14 [color="gray75",];
  8 -- 18 [color="gray75",];
  3 -- 15 [color="red:blue;0.5 " ];
}''',
]
