src/uv/snapshots/_gammaloop__uv__tests__three_loop_cycles.snap
---
source: src/uv/tests.rs
expression: cycles
---
[
  NestingNode(
    internal_graph: SubGraph(
      filter: BitSeq(
        order: "bitvec::order::Lsb0",
        head: BitIdx(
          width: 64,
          index: 0,
        ),
        bits: 12,
        data: [
          15,
        ],
      ),
      loopcount: Some(1),
    ),
    externalhedges: BitSeq(
      order: "bitvec::order::Lsb0",
      head: BitIdx(
        width: 64,
        index: 0,
      ),
      bits: 12,
      data: [
        2160,
      ],
    ),
  ),
  NestingNode(
    internal_graph: SubGraph(
      filter: BitSeq(
        order: "bitvec::order::Lsb0",
        head: BitIdx(
          width: 64,
          index: 0,
        ),
        bits: 12,
        data: [
          51,
        ],
      ),
      loopcount: Some(1),
    ),
    externalhedges: BitSeq(
      order: "bitvec::order::Lsb0",
      head: BitIdx(
        width: 64,
        index: 0,
      ),
      bits: 12,
      data: [
        2124,
      ],
    ),
  ),
  NestingNode(
    internal_graph: SubGraph(
      filter: BitSeq(
        order: "bitvec::order::Lsb0",
        head: BitIdx(
          width: 64,
          index: 0,
        ),
        bits: 12,
        data: [
          4035,
        ],
      ),
      loopcount: Some(1),
    ),
    externalhedges: BitSeq(
      order: "bitvec::order::Lsb0",
      head: BitIdx(
        width: 64,
        index: 0,
      ),
      bits: 12,
      data: [
        60,
      ],
    ),
  ),
]
