src/uv/snapshots/_gammaloop__uv__tests__three_loop_spinneys.snap
---
source: src/uv/tests.rs
expression: "all_spinneys.into_iter().map(|s|\n            graph.dot(&graph.nesting_node_from_subgraph(s))).collect_vec()"
---
[
    '''
graph {
   node [shape=circle,height=0.1,label=""];  overlap="scale";
   0 -- 1 [color="gray50",];
  1 -- 0 [color="gray50",];
  0 -- 1 [color="red:blue;0.5 " ];
  1 -- 2 [color="red:blue;0.5 " ];
  2 -- 3 [color="red:blue;0.5 " ];
  3 -- 0 [color="red:blue;0.5 " ];
}''',
    '''
graph {
   node [shape=circle,height=0.1,label=""];  overlap="scale";
   0 -- 1 [color="gray50",];
  1 -- 0 [color="red:blue;0.5 " ];
  0 -- 1 [color="gray50",];
  1 -- 2 [color="red:blue;0.5 " ];
  2 -- 3 [color="red:blue;0.5 " ];
  3 -- 0 [color="red:blue;0.5 " ];
}''',
    '''
graph {
   node [shape=circle,height=0.1,label=""];  overlap="scale";
   0 -- 1 [color="gray50",];
  1 -- 0 [color="red:blue;0.5 " ];
  0 -- 1 [color="red:blue;0.5 " ];
  1 -- 2 [color="gray50:gray75;0.5",];
  2 -- 3 [color="gray75",];
  3 -- 0 [color="gray75:gray50;0.5",];
}''',
    '''
graph {
   node [shape=circle,height=0.1,label=""];  overlap="scale";
   0 -- 1 [color="gray50",];
  1 -- 0 [color="red:blue;0.5 " ];
  0 -- 1 [color="red:blue;0.5 " ];
  1 -- 2 [color="red:blue;0.5 " ];
  2 -- 3 [color="red:blue;0.5 " ];
  3 -- 0 [color="red:blue;0.5 " ];
}''',
    '''
graph {
   node [shape=circle,height=0.1,label=""];  overlap="scale";
   0 -- 1 [color="red:blue;0.5 " ];
  1 -- 0 [color="gray50",];
  0 -- 1 [color="gray50",];
  1 -- 2 [color="red:blue;0.5 " ];
  2 -- 3 [color="red:blue;0.5 " ];
  3 -- 0 [color="red:blue;0.5 " ];
}''',
    '''
graph {
   node [shape=circle,height=0.1,label=""];  overlap="scale";
   0 -- 1 [color="red:blue;0.5 " ];
  1 -- 0 [color="gray50",];
  0 -- 1 [color="red:blue;0.5 " ];
  1 -- 2 [color="gray50:gray75;0.5",];
  2 -- 3 [color="gray75",];
  3 -- 0 [color="gray75:gray50;0.5",];
}''',
    '''
graph {
   node [shape=circle,height=0.1,label=""];  overlap="scale";
   0 -- 1 [color="red:blue;0.5 " ];
  1 -- 0 [color="gray50",];
  0 -- 1 [color="red:blue;0.5 " ];
  1 -- 2 [color="red:blue;0.5 " ];
  2 -- 3 [color="red:blue;0.5 " ];
  3 -- 0 [color="red:blue;0.5 " ];
}''',
    '''
graph {
   node [shape=circle,height=0.1,label=""];  overlap="scale";
   0 -- 1 [color="red:blue;0.5 " ];
  1 -- 0 [color="red:blue;0.5 " ];
  0 -- 1 [color="gray50",];
  1 -- 2 [color="gray50:gray75;0.5",];
  2 -- 3 [color="gray75",];
  3 -- 0 [color="gray75:gray50;0.5",];
}''',
    '''
graph {
   node [shape=circle,height=0.1,label=""];  overlap="scale";
   0 -- 1 [color="red:blue;0.5 " ];
  1 -- 0 [color="red:blue;0.5 " ];
  0 -- 1 [color="gray50",];
  1 -- 2 [color="red:blue;0.5 " ];
  2 -- 3 [color="red:blue;0.5 " ];
  3 -- 0 [color="red:blue;0.5 " ];
}''',
    '''
graph {
   node [shape=circle,height=0.1,label=""];  overlap="scale";
   0 -- 1 [color="red:blue;0.5 " ];
  1 -- 0 [color="red:blue;0.5 " ];
  0 -- 1 [color="red:blue;0.5 " ];
  1 -- 2 [color="gray50:gray75;0.5",];
  2 -- 3 [color="gray75",];
  3 -- 0 [color="gray75:gray50;0.5",];
}''',
    '''
graph {
   node [shape=circle,height=0.1,label=""];  overlap="scale";
   0 -- 1 [color="red:blue;0.5 " ];
  1 -- 0 [color="red:blue;0.5 " ];
  0 -- 1 [color="red:blue;0.5 " ];
  1 -- 2 [color="red:blue;0.5 " ];
  2 -- 3 [color="red:blue;0.5 " ];
  3 -- 0 [color="red:blue;0.5 " ];
}''',
]
